crates/libtest2/tests/ui/should_panic_attribute_typo.stderr
error: invalid attribute `#[should_panic(expect = "something")]` (expected `#[should_panic]`, `#[should_panic = ".."]`, or `#[should_panic(expected = "..")]`)
 --> tests/ui/should_panic_attribute_typo.rs:4:1
  |
4 | #[libtest2::test]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::_private::test_parse` which comes from the expansion of the attribute macro `libtest2::test` (in Nightly builds, run with -Z macro-backtrace for more info)
